@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_config.h,v 1.9 2005-06-07 20:29:28 achu Exp $
+ *  $Id: cerebro_config.h,v 1.10 2005-06-16 22:02:47 achu Exp $
 \*****************************************************************************/
 
 #ifndef _CEREBRO_CONFIG_H
@@ -57,6 +57,8 @@ struct cerebro_config
   int cerebrod_metric_server_port_flag;
   int cerebrod_metric_max;
   int cerebrod_metric_max_flag;
+  int cerebrod_monitor_max;
+  int cerebrod_monitor_max_flag;
 #if CEREBRO_DEBUG
   int cerebrod_speak_debug;
   int cerebrod_speak_debug_flag;
